add jpa-audit && spring-security

--- a/src/main/resources/templates/adminRegister.html
+++ b/src/main/resources/templates/adminRegister.html
@@ -1,30 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="layout/default">
 
 <head>
-
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-    <meta id="_csrf" name="_csrf" th:content="${_csrf.token}"/>
-    <!-- default header name is X-CSRF-TOKEN -->
-    <meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}"/>
-
-  <title>SB Admin - Register</title>
-
-    <!-- Custom fonts for this template-->
-    <link th:href="@{/bootstrap/vendor/fontawesome-free/css/all.min.css}" rel="stylesheet" type="text/css">
-
-    <!-- Custom styles for this template-->
-    <link th:href="@{/bootstrap/css/sb-admin.css}" rel="stylesheet">
-
+  <title>somoim - Admin-Register</title>
 </head>
-
-<body class="bg-dark">
-
-  <div class="container">
+  <div class="container" layout:fragment="content">
     <div class="card card-register mx-auto mt-5">
       <div class="card-header">Register an Account</div>
       <div class="card-body">
@@ -67,6 +49,8 @@
               </div>
             </div>
           </div>
+            <div class="alert alert-success" id="alert-success" style="display: none">비밀번호가 일치합니다.</div>
+            <div class="alert alert-danger" id="alert-danger" style="display: none">비밀번호가 일치하지 않습니다.</div>
             <button  type="button" id="registerButton" class="btn btn-primary btn-block">Register</button>
         </form>
         <div class="text-center">
@@ -76,50 +60,65 @@
       </div>
     </div>
   </div>
-  <!-- Bootstrap core JavaScript-->
-  <script th:src="@{/bootstrap/vendor/jquery/jquery.min.js}"></script>
-  <script th:src="@{/bootstrap/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+  <th:block layout:fragment="script">
+      <script th:inline="javascript" type="text/javascript">
+          //script구문 내부에 해당 메소드를 입력합니다.
+          $(function() {
+              var pwEqualCheck =false;
 
-  <!-- Core plugin JavaScript-->
-  <script th:src="@{/bootstrap/vendor/jquery-easing/jquery.easing.min.js}"></script>
-  <script th:inline="javascript" type="text/javascript">
-      //script구문 내부에 해당 메소드를 입력합니다.
-      $(function() {
-          $('#registerButton').bind("click",function () {
-              var url="/admin";
-              var param =  $("#registerForm :input").filter(function(idx,element){
-                  return $(element).val() !='';
-              }).serialize();
+              $("input").keyup(function(){
+                  var pwd1=$("#inputPassword").val();
+                  var pwd2=$("#confirmPassword").val();
+                  if(pwd1 != "" || pwd2 != "") {
+                      if (pwd1 == pwd2) {
+                          $("#alert-success").show();
+                          $("#alert-danger").hide();
+                          pwEqualCheck = true;
+                      } else {
+                          $("#alert-success").hide();
+                          $("#alert-danger").show();
+                          pwEqualCheck = false;
+                      }
+                  }
+              });
+              $('#registerButton').bind("click",function () {
+                  if(pwEqualCheck == false){
+                      return false;
+                  }
 
-              alert(param);
-              var token = $("meta[name='_csrf']").attr("content");
-              var header = $("meta[name='_csrf_header']").attr("content");
-              $.ajax({
-                  type : "POST"
-                  , url : url
-                  , data : param
-                 ,   beforeSend : function(xhr)
+                  var url="/admin";
+                  var param =  $("#registerForm :input").filter(function(idx,element){
+                      return $(element).val() !='';
+                  }).serialize();
+
+                  alert(param);
+                  var token = $("meta[name='_csrf']").attr("content");
+                  var header = $("meta[name='_csrf_header']").attr("content");
+                  $.ajax({
+                      type : "POST"
+                      , url : url
+                      , data : param
+                      ,   beforeSend : function(xhr)
                       {   /*데이터를 전송하기 전에 헤더에 csrf값을 설정한다*/
                           xhr.setRequestHeader(header, token);
                       }
-                  , error : function(jqXHR, textStatus, errorThrown) { // jqXHR : xml http request object, textStatus : Jquery status code, errorThrown : exception object
-                      /*
-                                           callback(jqXHR.responseJSON, jqXHR);
-                      */
-                      alert(jqXHR.status);
-                  }
-                  , success : function(data, textStatus, jqXHR){ // data : server response data, textStatus : Jquery status code, jqXHR : xml http request object
-                      /*
-                                           callback(data, jqXHR);
-                      */
-                      alert(jqXHR.status);
-                  }
-              });
-              return false;
-          })
+                      , error : function(jqXHR, textStatus, errorThrown) { // jqXHR : xml http request object, textStatus : Jquery status code, errorThrown : exception object
+                          /*
+                                               callback(jqXHR.responseJSON, jqXHR);
+                          */
+                          alert(jqXHR.status);
+                      }
+                      , success : function(data, textStatus, jqXHR){ // data : server response data, textStatus : Jquery status code, jqXHR : xml http request object
+                          /*
+                                               callback(data, jqXHR);
+                          */
+                          alert(jqXHR.status);
+                      }
+                  });
+                  return false;
+              })
 
-      });
-  </script>
-</body>
-
+          });
+      </script>
+  </th:block>
 </html>
