--- a/src/main/resources/templates/tables.html
+++ b/src/main/resources/templates/tables.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="layout/default">
+      layout:decorate="~{layout/default}">
 <head>
   <title>SB Admin - Tables</title>
     <!-- index.html 고유 CSS 추가 -->
