--- a/src/main/resources/templates/fragments/side-bar.html
+++ b/src/main/resources/templates/fragments/side-bar.html
@@ -16,7 +16,9 @@
             <div class="dropdown-menu" aria-labelledby="pagesDropdown">
                 <h6 class="dropdown-header">Login Screens:</h6>
                 <a class="dropdown-item" href="login.html">Login</a>
-                <a class="dropdown-item" href="register.html">Register</a>
+                <a class="dropdown-item" th:href="@{/admin}">Admin Register</a>
+                <a class="dropdown-item" th:href="@{/member}">Member Register</a>
+
                 <a class="dropdown-item" href="forgot-password.html">Forgot Password</a>
                 <div class="dropdown-divider"></div>
                 <h6 class="dropdown-header">Other Pages:</h6>
@@ -25,14 +27,19 @@
             </div>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="charts.html">
+            <a class="nav-link" th:href="@{/chart}">
                 <i class="fas fa-fw fa-chart-area"></i>
                 <span>Charts</span></a>
         </li>
         <li class="nav-item active">
             <a class="nav-link" th:href="@{/tables}">
                 <i class="fas fa-fw fa-table"></i>
-                <span>Tables</span></a>
+                <span>Member(회원)</span></a>
+        </li>
+        <li class="nav-item active">
+            <a class="nav-link" th:href="@{/attend}">
+                <i class="fas fa-fw fa-table"></i>
+                <span>Recently Attend(최근 출석)</span></a>
         </li>
     </ul>
 </html>
