--- a/src/main/resources/templates/attend.html
+++ b/src/main/resources/templates/attend.html
@@ -26,12 +26,13 @@
         <div class="card mb-3">
           <div class="card-header">
             <i class="fas fa-table"></i>
-            Data Table Example</div>
+            출석 관리</div>
           <div class="card-body">
             <div class="table-responsive">
               <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                 <thead>
                   <tr>
+                      <th>sequence</th>
                       <th>이름</th>
                       <th>모임 장소</th>
                       <th>참여 일자</th>
@@ -43,6 +44,7 @@
                 </thead>
                 <tfoot>
                   <tr>
+                      <th>sequence</th>
                       <th>이름</th>
                       <th>모임 장소</th>
                       <th>참여 장소</th>
@@ -55,13 +57,8 @@
               </table>
             </div>
           </div>
-          <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+          <div class="card-footer small text-muted"></div>
         </div>
-
-        <p class="small text-center text-muted my-5">
-          <em>More table examples coming soon...</em>
-        </p>
-
       </div>
       <!-- /.container-fluid -->
 
@@ -70,48 +67,6 @@
     <i class="fas fa-angle-up"></i>
   </a>
 
-  <!-- Logout Modal-->
-  <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-          <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">×</span>
-          </button>
-        </div>
-        <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-        <div class="modal-footer">
-          <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-          <a class="btn btn-primary" href="login.html">Logout</a>
-        </div>
-      </div>
-    </div>
-  </div>
-<!--add modal-->
-  <div class="modal fade" id="myModal">
-      <div class="modal-dialog">
-          <div class="modal-content">
-              <div class="modal-header">myModal
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                  <h4 class="modal-title">Modal title</h4>
-              </div>
-              <div class="modal-body">
-                  <input type="text" name="moimPlace" id="moimPlace"/>
-                  <div class="form-group">
-                      <div class="form-label-group">
-                          <input type="text" id="testDatepicker" class="form-control" name="participateDate" placeholder="Join Date" required="required">
-                          <label for="testDatepicker">참여 일자</label>
-                      </div>
-                  </div>
-              </div>
-              <div class="modal-footer">
-                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                  <button type="button" id="saveAttend" class="btn btn-primary">Save changes</button>
-              </div>
-          </div><!-- /.modal-content -->
-      </div><!-- /.modal-dialog -->
-  </div><!-- /.modal -->
 </div>
 <!-- /.content-wrapper -->
   <!-- index.html 고유 스크립트 추가 -->
