--- a/src/main/resources/templates/chartJS.html
+++ b/src/main/resources/templates/chartJS.html
@@ -66,12 +66,12 @@
         var myLineChart = new Chart(ctx2, {
             type: 'bar',
             data: {
-                labels: [attendRate[0].month,attendRate[1].month,attendRate[2].month],
+                labels: [],
                 datasets: [{
                     label: "Revenue",
                     backgroundColor: "rgba(2,117,216,1)",
                     borderColor: "rgba(2,117,216,1)",
-                    data: [attendRate[0].membercount,attendRate[1].membercount,attendRate[2].membercount],
+                    data: [],
                 }],
             },
             options: {
@@ -105,18 +105,53 @@
         });
 
 
+        for(var i=0; i<attendRate.length; i++){
+            //if(attendRate[i].memberCount !== 0){
+                console.log(attendRate[i].membercount);
+                myLineChart.data.datasets[0].data[i] = attendRate[i].membercount;
+                myLineChart.data.labels[i] = attendRate[i].month;
+            //}
+        }
+
+        myLineChart.update();
+
+
+
+        var test = [];
+
         // Pie Chart Example
         var ctx3 = document.getElementById("myPieChart");
+
         var myPieChart = new Chart(ctx3, {
             type: 'pie',
             data: {
-                labels: [attendRank[0].memberName, attendRank[1].memberName, attendRank[2].memberName, attendRank[3].memberName],
+                labels: [],
                 datasets: [{
-                    data: [attendRank[0].memberCount, attendRank[1].memberCount, attendRank[2].memberCount, attendRank[3].memberCount],
+                    data: [],
                     backgroundColor: ['#007bff', '#dc3545', '#ffc107', '#28a745'],
-                }],
-            },
+                }]
+            }
         });
+
+        if(attendRank.length > 0){
+            for(var i=0 ; i < attendRank.length ; i++){
+
+                if(attendRank[i].memberCount != 0){
+                    myPieChart.data.datasets[0].data[i] = attendRank[i].memberCount;
+                    myPieChart.data.labels[i] = attendRank[i].memberName;
+                }
+
+            }
+
+        }else{
+            myPieChart.data.datasets[0].data[0] = 100;
+            myPieChart.data.labels[0] = 'No Data';
+
+        }
+        myPieChart.update();
+
+
+
 
     });
 </script>
