--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -63,8 +63,26 @@
         </ul>
 
     </nav>
-    <!-- <a th:href="@{/index}">index 페이지 이동</a>-->
-
+    <!-- Logout Modal-->
+    <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">×</span>
+                    </button>
+                </div>
+                <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+                <form th:action="@{/logout}" id="logoutProcessing" method="post">
+                    <div class="modal-footer">
+                        <a class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</a>
+                        <button class="btn btn-primary" type="submit">Logout</button>
+                    </div>
+               </form>
+            </div>
+        </div>
+    </div>
 </header>
 
 </html>
