--- a/src/main/resources/templates/fragments/side-bar.html
+++ b/src/main/resources/templates/fragments/side-bar.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-    <ul class="sidebar navbar-nav" th:fragment="sidebarFragment">
+
+<head>    <ul class="sidebar navbar-nav" th:fragment="sidebarFragment">
         <!-- Sidebar -->
-        <li class="nav-item">
-            <a class="nav-link" href="index.html">
+        <li class="nav-item" id="mainPage">
+            <a class="nav-link" th:href="@{/index(pageName=mainPage)}">
                 <i class="fas fa-fw fa-tachometer-alt"></i>
-                <span>Dashboard</span>
+                <span>메인</span>
             </a>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown" id="pages">
             <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <i class="fas fa-fw fa-folder"></i>
                 <span>Pages</span>
@@ -16,8 +17,8 @@
             <div class="dropdown-menu" aria-labelledby="pagesDropdown">
                 <h6 class="dropdown-header">Login Screens:</h6>
                 <a class="dropdown-item" href="login.html">Login</a>
-                <a class="dropdown-item" th:href="@{/admin}">Admin Register</a>
-                <a class="dropdown-item" th:href="@{/member}">Member Register</a>
+                <a class="dropdown-item" th:href="@{/admin(pageName=pages)}">Admin Register</a>
+                <a class="dropdown-item" th:href="@{/member(pageName=pages)}">Member Register</a>
 
                 <a class="dropdown-item" href="forgot-password.html">Forgot Password</a>
                 <div class="dropdown-divider"></div>
@@ -26,20 +27,21 @@
                 <a class="dropdown-item" href="blank.html">Blank Page</a>
             </div>
         </li>
-        <li class="nav-item">
-            <a class="nav-link" th:href="@{/chart}">
+        <li class="nav-item" id="chart">
+            <a class="nav-link" th:href="@{/chart(pageName=chart)}">
                 <i class="fas fa-fw fa-chart-area"></i>
-                <span>Charts</span></a>
+                <span>차트</span></a>
         </li>
-        <li class="nav-item active">
-            <a class="nav-link" th:href="@{/tables}">
+        <li class="nav-item" id="tables">
+            <a class="nav-link" th:href="@{/tables(pageName=tables)}">
                 <i class="fas fa-fw fa-table"></i>
-                <span>Member(회원)</span></a>
+                <span>회원 관리</span></a>
         </li>
-        <li class="nav-item active">
-            <a class="nav-link" th:href="@{/attend}">
+        <li class="nav-item" id="attend">
+            <a class="nav-link" th:href="@{/attend(pageName=attend)}">
                 <i class="fas fa-fw fa-table"></i>
-                <span>Recently Attend(최근 출석)</span></a>
+                <span>최근 출석</span></a>
         </li>
     </ul>
+
 </html>
