--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 
   <meta charset="utf-8">
@@ -12,10 +11,11 @@
   <title>SB Admin - Login</title>
 
   <!-- Custom fonts for this template-->
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link th:href="@{/bootstrap/vendor/fontawesome-free/css/all.min.css}" rel="stylesheet" type="text/css">
 
   <!-- Custom styles for this template-->
-  <link href="css/sb-admin.css" rel="stylesheet">
+  <link th:href="@{/bootstrap/css/sb-admin.css}" rel="stylesheet">
+
 
 </head>
 
@@ -25,17 +25,18 @@
     <div class="card card-login mx-auto mt-5">
       <div class="card-header">Login</div>
       <div class="card-body">
-        <form>
+        <form th:action="@{/loginProcessing}" id="loginProcessing" method="post">
+          <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}" />
           <div class="form-group">
             <div class="form-label-group">
-              <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="required" autofocus="autofocus">
-              <label for="inputEmail">Email address</label>
+              <input type="text" id="userId"  name="userId" class="form-control" placeholder="User Id" required="required" autofocus="autofocus">
+              <label for="userId">User Id</label>
             </div>
           </div>
           <div class="form-group">
             <div class="form-label-group">
-              <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="required">
-              <label for="inputPassword">Password</label>
+              <input type="password" id="userPwd" name="userPwd" class="form-control" placeholder="Password" required="required">
+              <label for="userPwd">Password</label>
             </div>
           </div>
           <div class="form-group">
@@ -46,7 +47,7 @@
               </label>
             </div>
           </div>
-          <a class="btn btn-primary btn-block" href="index.html">Login</a>
+          <a class="btn btn-primary btn-block" id="loginButtion">Login</a>
         </form>
         <div class="text-center">
           <a class="d-block small mt-3" href="register.html">Register an Account</a>
@@ -57,11 +58,21 @@
   </div>
 
   <!-- Bootstrap core JavaScript-->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script th:src="@{/bootstrap/vendor/jquery/jquery.min.js}"></script>
+  <script th:src="@{/bootstrap/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
 
   <!-- Core plugin JavaScript-->
-  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+  <script th:src="@{/bootstrap/vendor/jquery-easing/jquery.easing.min.js}"></script>
+  <script type="text/javascript">
+    $('#loginButtion').on('click',function () {
+      alert("dd");
+        $('#loginProcessing').submit();
+
+    })
+
+  </script>
+
+
 
 </body>
 
