--- a/src/main/resources/templates/tables.html
+++ b/src/main/resources/templates/tables.html
@@ -26,7 +26,7 @@
         <div class="card mb-3">
           <div class="card-header">
             <i class="fas fa-table"></i>
-            Data Table Example</div>
+            회원 관리</div>
           <div class="card-body">
             <div class="table-responsive">
               <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
@@ -55,12 +55,8 @@
               </table>
             </div>
           </div>
-          <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+          <div class="card-footer small text-muted"></div>
         </div>
-
-        <p class="small text-center text-muted my-5">
-          <em>More table examples coming soon...</em>
-        </p>
 
       </div>
       <!-- /.container-fluid -->
@@ -70,37 +66,22 @@
     <i class="fas fa-angle-up"></i>
   </a>
 
-  <!-- Logout Modal-->
-  <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-          <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">×</span>
-          </button>
-        </div>
-        <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-        <div class="modal-footer">
-          <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-          <a class="btn btn-primary" href="login.html">Logout</a>
-        </div>
-      </div>
-    </div>
-  </div>
+
 <!--add modal-->
   <div class="modal fade" id="myModal">
       <div class="modal-dialog">
           <div class="modal-content">
-              <div class="modal-header">myModal
+              <div class="modal-header">회원 출석
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                  <h4 class="modal-title">Modal title</h4>
               </div>
               <div class="modal-body">
-                  <input type="text" name="moimPlace" id="moimPlace"/>
                   <div class="form-group">
                       <div class="form-label-group">
-                          <input type="text" id="testDatepicker" class="form-control" name="participateDate" placeholder="Join Date" required="required">
+                          <input type="text" name="moimPlace" id="moimPlace" class="form-control" placeholder="모임 장소" required="true"/>
+                          <label for="moimPlace">모임 장소</label>
+                      </div>
+                      <div class="form-label-group">
+                          <input type="text" id="testDatepicker" class="form-control" name="participateDate" placeholder="Join Date" required="true">
                           <label for="testDatepicker">참여 일자</label>
                       </div>
                   </div>
@@ -112,6 +93,7 @@
           </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
   </div><!-- /.modal -->
+
 </div>
 <!-- /.content-wrapper -->
   <!-- index.html 고유 스크립트 추가 -->
