비밀번호 초기화 기능(forgot-password) 추가 , spring-boot-starter-mail 추가

--- a/src/main/resources/templates/forgot-password.html
+++ b/src/main/resources/templates/forgot-password.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 
   <meta charset="utf-8">
@@ -9,13 +8,14 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>SB Admin - Forgot Password</title>
+  <title>SB Admin - Forgot_Password</title>
 
   <!-- Custom fonts for this template-->
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link th:href="@{/bootstrap/vendor/fontawesome-free/css/all.min.css}" rel="stylesheet" type="text/css">
 
   <!-- Custom styles for this template-->
-  <link href="css/sb-admin.css" rel="stylesheet">
+  <link th:href="@{/bootstrap/css/sb-admin.css}" rel="stylesheet">
+
 
 </head>
 
@@ -28,30 +28,35 @@
         <div class="text-center mb-4">
           <h4>Forgot your password?</h4>
           <p>Enter your email address and we will send you instructions on how to reset your password.</p>
+          <p th:if="${param.error}">Invalid user id or email.</p>
         </div>
-        <form>
+        <form th:action="@{/reset-password}" method="post">
           <div class="form-group">
             <div class="form-label-group">
-              <input type="email" id="inputEmail" class="form-control" placeholder="Enter email address" required="required" autofocus="autofocus">
-              <label for="inputEmail">Enter email address</label>
+              <input type="text" id="userId" name="userId" class="form-control" placeholder="Enter user id" required="required" autofocus="autofocus">
+              <label for="userId">Enter user id</label>
+            </div>
+            <div class="form-label-group">
+              <input type="email" id="userEmail" name="userEmail" class="form-control" placeholder="Enter email address" required="required" autofocus="autofocus">
+              <label for="userEmail">Enter email address</label>
             </div>
           </div>
-          <a class="btn btn-primary btn-block" href="login.html">Reset Password</a>
+          <input type="submit" class="btn btn-primary btn-block" value="Reset Password">
         </form>
         <div class="text-center">
           <a class="d-block small mt-3" href="register.html">Register an Account</a>
-          <a class="d-block small" href="login.html">Login Page</a>
+          <a class="d-block small" th:href="@{/login}">Login Page</a>
         </div>
       </div>
     </div>
   </div>
 
   <!-- Bootstrap core JavaScript-->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script th:src="@{/bootstrap/vendor/jquery/jquery.min.js}"></script>
+  <script th:src="@{/bootstrap/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
 
   <!-- Core plugin JavaScript-->
-  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+  <script th:src="@{/bootstrap/vendor/jquery-easing/jquery.easing.min.js}"></script>
 
 </body>
 
