--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -26,7 +26,6 @@
       <div class="card-header">Login</div>
       <div class="card-body">
         <form th:action="@{/login}" id="loginProcessing" method="post">
-          <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}" />
           <div class="form-group">
             <div class="form-label-group">
               <input type="text" id="userId"  name="userId" class="form-control" placeholder="User Id" required="required" autofocus="autofocus">
@@ -51,7 +50,7 @@
         </form>
         <div class="text-center">
           <a class="d-block small mt-3" href="register.html">Register an Account</a>
-          <a class="d-block small" href="forgot-password.html">Forgot Password?</a>
+          <a class="d-block small" th:href="@{forgot-password}">Forgot Password?</a>
         </div>
       </div>
     </div>
